--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
     "name": "marco_pollo",
     "version": "0.0.1",
-    "description": "The frontend of a chayns application",
+    "description": "The frontend of a application",
     "project": {
         "internalName": "MarcoPollo",
         "externalName": "MarcoPollo",
-        "loggerGuid": "00000000-0000-0000-0000-000000000000",
         "subproject": null,
-        "textStringPrefix": "txt_chayns_marcopollo_",
-        "textLibName": "MarcoPollo",
         "strictLogging": false
     },
     "private": true,
     "keywords": [
         "chayns",
         "react",
-        "chayns-toolkit"
     ],
     "homepage": "",
     "bugs": {
@@ -46,11 +42,7 @@
         "tabWidth": 4
     },
     "dependencies": {
-        "@chayns/colors": "^1.0.3",
         "@reduxjs/toolkit": "^1.5.0",
-        "chayns-components": "^4.21.2",
-        "chayns-helper": "^2.18.1-beta.1",
-        "chayns-logger": "^2.8.5",
         "clsx": "^1.1.1",
         "date-fns": "^2.16.1",
         "react": "^17.0.1",
@@ -62,8 +54,6 @@
         "@types/react-dom": "^17.0.7",
         "@types/react-redux": "^7.1.16",
         "@types/redux-logger": "^3.0.8",
-        "chayns-doc": "^1.4.5",
-        "chayns-toolkit": "^1.6.3",
         "cross-env": "^7.0.3",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-config-airbnb-base": "^14.2.0",
