:bug: Remove comma

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "private": true,
     "keywords": [
         "chayns",
-        "react",
+        "react"
     ],
     "homepage": "",
     "bugs": {
