--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "date-fns": "^2.16.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-redux": "^7.2.2"
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
         "@types/react": "^17.0.11",
