--- a/package.json
+++ b/package.json
@@ -1,73 +1,68 @@
 {
-    "name": "marco_pollo",
-    "version": "0.0.1",
-    "description": "The frontend of an application",
-    "project": {
-        "internalName": "MarcoPollo",
-        "externalName": "MarcoPollo",
-        "strictLogging": false
-    },
-    "private": true,
-    "keywords": [
-        "chayns",
-        "react"
+  "name": "test",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.0",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.15",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.3.2",
+    "web-vitals": "^1.1.2",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-logger": "^3.0.8",
+    "cross-env": "^7.0.3",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "prettier": "^2.1.2",
+    "prettier-plugin-packagejson": "^2.2.9",
+    "prop-types": "^15.7.2",
+    "react-devtools": "^4.10.1",
+    "redux-logger": "^3.0.6",
+    "typescript": "^4.3.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "homepage": "",
-    "bugs": {
-        "url": ""
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "author": "Tobit Laboratories AG",
-    "main": "index.jsx",
-    "scripts": {
-        "build": "chayns-toolkit build",
-        "build:analyze": "chayns-toolkit build --analyze",
-        "build:debug": "cross-env BUILD_ENV=qa chayns-toolkit build && node publish.js --debug",
-        "dev": "chayns-toolkit dev",
-        "dev:devtools": "chayns-toolkit dev --devtools",
-        "version:increment": "npm version patch -m \":bookmark: Version %s\"",
-        "install:all": "npm install",
-        "format": "prettier . --write",
-        "lint": "chayns-toolkit lint",
-        "start": "npm run dev"
-    },
-    "prettier": {
-        "printWidth": 120,
-        "proseWrap": "always",
-        "singleQuote": true,
-        "tabWidth": 4
-    },
-    "dependencies": {
-        "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2",
-        "@reduxjs/toolkit": "^1.5.0",
-        "clsx": "^1.1.1",
-        "date-fns": "^2.16.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-redux": "^7.2.2",
-        "react-router-dom": "^5.2.0"
-    },
-    "devDependencies": {
-        "@types/react": "^17.0.11",
-        "@types/react-dom": "^17.0.7",
-        "@types/react-redux": "^7.1.16",
-        "@types/redux-logger": "^3.0.8",
-        "cross-env": "^7.0.3",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-react": "^7.22.0",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "prettier": "^2.1.2",
-        "prettier-plugin-packagejson": "^2.2.9",
-        "prop-types": "^15.7.2",
-        "react-devtools": "^4.10.1",
-        "redux-logger": "^3.0.6",
-        "typescript": "^4.3.2"
-    }
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
