--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
-    "react-router-dom": "^5.2.0",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
