--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
-    "clsx": "^1.1.1",
-    "date-fns": "^2.16.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -21,17 +19,20 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2",
-    "react-router-dom": "^5.2.0"
+    "web-vitals": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
     "cross-env": "^7.0.3",
     "eslint-config-airbnb": "^18.2.0",
