--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^17.0.7",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -45,8 +46,7 @@
     "prettier-plugin-packagejson": "^2.2.9",
     "prop-types": "^15.7.2",
     "react-devtools": "^4.10.1",
-    "redux-logger": "^3.0.6",
-    "typescript": "^4.3.2"
+    "redux-logger": "^3.0.6"
   },
   "eslintConfig": {
     "extends": [
