--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.16.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-dom": "^17.0.7",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
